<resources>
    <string name="app_name">Library Management System</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="logo_image_description">Logo Image</string>
    <string name="title_activity_main">LMS - Librarian View</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign In</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </string>
    <string name="title_book_details">Book Details</string>
    <string name="search_with_isbn">Search with ISBN</string>
    <string name="search">Search</string>
    <string name="welcome_placeholder">Welcome,</string>
    <string name="isbn_error">Must be a Valid ISBN13 Number</string>
    <string name="copies_available">Copies Available</string>
    <string name="no_copies_available">No books in library</string>
    <string name="rent_book_btn_text">Rent Book</string>
    <string name="deposit_book_btn_text">Deposit Book</string>
    <string name="isbn_number_of_the_book_hint">ISBN Number of the Book</string>
    <string name="book_name_hint">Book Name</string>
    <string name="book_author_hint">Book Author</string>
    <string name="description_hint">Short Description of the Book</string>
    <string name="copies_hint">Initial Number of Copies</string>
    <string name="add_book_details_btn_text">Add Book Details</string>
    <string name="copies_edit_hint">Number of Copies</string>
    <string name="edit_book_btn">Edit Book Details</string>
    <string name="no_books_available_hint">NO BOOKS AVAILABLE</string>
    <string name="scan_books_menu">Scan Books</string>
    <string name="coming_dues_menu">Coming Dues</string>
    <string name="all_dues_menu">All Dues</string>
    <string name="edit_a_book_menu">Edit a Book</string>
    <string name="add_a_book_menu">Add a Book</string>
    <string name="menu_title_profile">Profile</string>
    <string name="sign_out_menu">Sign Out</string>
    <string name="scan_isbn_btn">Scan ISBN</string>
    <string name="development_build_watermark">Development Build version</string>
    <string name="about_app_text">About App</string>
    <string name="developers_title_text">Developers</string>
    <string name="developer_names_text">Aurghyadip Kundu, Shrestha Shaw, Rajdeep Saha, Sayanjit Das</string>
</resources>
