<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scan"
            android:title="@string/scan_books_menu" />
        <item
            android:id="@+id/nav_coming_dues"
            android:title="@string/coming_dues_menu" />
        <item
            android:id="@+id/nav_all_dues"
            android:title="@string/all_dues_menu" />
        <item
            android:id="@+id/nav_edit_book"
            android:title="@string/edit_a_book_menu" />
        <item
            android:id="@+id/nav_add_book"
            android:title="@string/add_a_book_menu" />
    </group>

    <item android:title="@string/menu_title_profile">
        <menu>
            <item
                android:id="@+id/nav_signout"
                android:title="@string/sign_out_menu" />
        </menu>
    </item>

</menu>
