<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_isbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_info_black_24dp"
                android:drawablePadding="8dp"
                android:inputType="number"
                android:hint="@string/isbn_number_of_the_book_hint"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_library_books_black_24dp"
                android:drawablePadding="8dp"
                android:hint="@string/book_name_hint"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawablePadding="8dp"
                android:hint="@string/book_author_hint"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:hint="@string/description_hint"
                android:drawableStart="@drawable/ic_description_black_24dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_copies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:hint="@string/copies_hint"
                android:drawableStart="@drawable/ic_content_copy_black_24dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/add_book_btn"
            android:layout_margin="16dp"
            android:layout_width="240dp"
            android:padding="8dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorLight"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_book_details_btn_text"/>

    </LinearLayout>

</ScrollView>